# perfevent-rs

./: Cargo.toml  LICENSE  README.md  default.nix
examples/: basic.rs  timesliced_example.rs  timesliced_updates_example.rs
src/: block.rs  lib.rs  print.rs  timesliced.rs
